adding custom elements (table, img)

--- a/about.html
+++ b/about.html
@@ -244,6 +244,118 @@
                     воздушного отопления и выполняет работы по изготовлению промышленного вентиляционного оборудования, его наладке и технического обслуживания.</h2>
                 <p>Тысячи заказчиков в Украине и за рубежом приобретают наше оборудование благодаря высокому качеству, минимальным срокам изготовления, простоте в монтаже и <a href="">lololo</a>
                     обслуживании.</p>
+                <table width="471" cellspacing="0" cellpadding="7">
+                    <colgroup>
+                        <col width="120">
+                        <col width="62">
+                        <col width="82">
+                        <col width="149"> </colgroup>
+                    <tbody>
+                    <tr>
+                        <td rowspan="2" width="120">
+                            <p class="western" align="center">Обозначение</p>
+                        </td>
+                        <td colspan="3" valign="top" width="321">
+                            <p class="western" align="center">Размеры, мм</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="62">
+                            <p class="western" align="center"><span lang="en-US">D</span>, мм</p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span lang="en-US">L</span>, мм</p>
+                        </td>
+                        <td valign="top" width="149">
+                            <p class="western" align="center"><span lang="en-US">L</span>1, мм</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,15</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">415</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">1656</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">1766</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,55</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">470</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">1996</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2121</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-4</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">515</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2042</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2172</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-4,5</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">565</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2094</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2224</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-5</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">605</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2146</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2291</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-5,6</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">675</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2210</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2355</span></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
@@ -309,6 +421,118 @@
                         и наград. Вся продукция сертифицирована. Наличие мощной производственной и научно-технической базы, современные технологии дают возможность выпускать
                         продукцию,
                         удовлетворяющую запросы монтажных, проектных, строительных организаций и других потребителей всех отраслей народного хозяйства.</p>
+                    <table width="471" cellspacing="0" cellpadding="7">
+                        <colgroup>
+                            <col width="120">
+                            <col width="62">
+                            <col width="82">
+                            <col width="149"> </colgroup>
+                        <tbody>
+                        <tr>
+                            <td rowspan="2" width="120">
+                                <p class="western" align="center">Обозначение</p>
+                            </td>
+                            <td colspan="3" valign="top" width="321">
+                                <p class="western" align="center">Размеры, мм</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td width="62">
+                                <p class="western" align="center"><span lang="en-US">D</span>, мм</p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span lang="en-US">L</span>, мм</p>
+                            </td>
+                            <td valign="top" width="149">
+                                <p class="western" align="center"><span lang="en-US">L</span>1, мм</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,15</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">415</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">1656</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">1766</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,55</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">470</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">1996</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2121</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-4</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">515</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2042</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2172</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-4,5</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">565</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2094</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2224</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-5</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">605</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2146</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2291</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-5,6</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">675</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2210</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2355</span></p>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                     <img src="media/about-img4.png" alt="">
                 </div>
             </div>
