--- a/news-item.html
+++ b/news-item.html
@@ -34,10 +34,234 @@
                     невзрывоопасных воздушных смесей, агрессивность которых по отношению к углеродистым сталям обыкновенного качества не выше агрессивности воздуха, с температурой
                     от минус 40°С до плюс 80°С, не содержащих липких веществ и волокнистых материалов, с содержанием пыли и других твердых примесей в количестве не более 100 мг/м3,
                     через ответвления к отключенным вентиляторам (от ответлений отключенных вентиляторов) при присоединении откключенных вентиляторов к коллекторам.</p>
+                <table width="471" cellspacing="0" cellpadding="7">
+                    <colgroup>
+                        <col width="120">
+                        <col width="62">
+                        <col width="82">
+                        <col width="149"> </colgroup>
+                    <tbody>
+                    <tr>
+                        <td rowspan="2" width="120">
+                            <p class="western" align="center">Обозначение</p>
+                        </td>
+                        <td colspan="3" valign="top" width="321">
+                            <p class="western" align="center">Размеры, мм</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="62">
+                            <p class="western" align="center"><span lang="en-US">D</span>, мм</p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span lang="en-US">L</span>, мм</p>
+                        </td>
+                        <td valign="top" width="149">
+                            <p class="western" align="center"><span lang="en-US">L</span>1, мм</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,15</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">415</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">1656</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">1766</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,55</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">470</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">1996</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2121</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-4</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">515</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2042</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2172</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-4,5</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">565</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2094</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2224</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-5</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">605</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2146</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2291</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-5,6</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">675</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2210</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2355</span></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
                 <p>Клапаны рассчитаны на эксплуатацию в районах с умеренным (У) климатом категории размещения 3 по ГОСТ 15150. При установке клапанов в вертикальном воздуховоде
                     поток воздуха должен быть направлен снизу вверх. Установка клапанов в сети допускается при скоростях движения воздуха на горизонтальных участках V≥ 5м/с и на
                     вертикальных V≥4 м/с. </p> <a href=""> lolo</a>
                 <p>Клапаны обратные КО.100 применяются в системах вентиляции с рабочим давлением до 800 Па.</p>
+                <table width="471" cellspacing="0" cellpadding="7">
+                    <colgroup>
+                        <col width="120">
+                        <col width="62">
+                        <col width="82">
+                        <col width="149"> </colgroup>
+                    <tbody>
+                    <tr>
+                        <td rowspan="2" width="120">
+                            <p class="western" align="center">Обозначение</p>
+                        </td>
+                        <td colspan="3" valign="top" width="321">
+                            <p class="western" align="center">Размеры, мм</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="62">
+                            <p class="western" align="center"><span lang="en-US">D</span>, мм</p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span lang="en-US">L</span>, мм</p>
+                        </td>
+                        <td valign="top" width="149">
+                            <p class="western" align="center"><span lang="en-US">L</span>1, мм</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,15</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">415</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">1656</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">1766</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,55</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">470</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">1996</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2121</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-4</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">515</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2042</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2172</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-4,5</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">565</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2094</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2224</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-5</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">605</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2146</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2291</span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top" width="120">
+                            <p class="western"><span style="font-size: small;">ВОДВ-15-320-5,6</span></p>
+                        </td>
+                        <td width="62">
+                            <p class="western" align="center"><span style="font-size: small;">675</span></p>
+                        </td>
+                        <td width="82">
+                            <p class="western" align="center"><span style="font-size: small;">2210</span></p>
+                        </td>
+                        <td width="149">
+                            <p class="western" align="center"><span style="font-size: small;">2355</span></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
                 <div class="news-img">
                     <div>
                         <a data-fancybox="newsGallery" href="media/home-newes1.png">
@@ -117,6 +341,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
+<script src="js/jquery.inputmask.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
