--- a/product.html
+++ b/product.html
@@ -119,6 +119,118 @@
                         КЦКМ-8-1, КЦКМ-8-2, КЦКМ-10, КЦКМ-12,5, КЦКМ-16, КЦКМ-20; - Подвесные кондиционеры КЦКП-1,5, КЦКП-2, КЦКП-3, КЦКП-4, а также оборудование, из которого они
                         состоят (дальше по тексту “кондиционеры” и “вентиляционное оборудование”) проектируются и изготавливаются для внутреннего рынка и на экспорт в страны с
                         умеренным и тропическим климатом. </p>
+                    <table width="471" cellspacing="0" cellpadding="7">
+                        <colgroup>
+                            <col width="120">
+                            <col width="62">
+                            <col width="82">
+                            <col width="149"> </colgroup>
+                        <tbody>
+                        <tr>
+                            <td rowspan="2" width="120">
+                                <p class="western" align="center">Обозначение</p>
+                            </td>
+                            <td colspan="3" valign="top" width="321">
+                                <p class="western" align="center">Размеры, мм</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td width="62">
+                                <p class="western" align="center"><span lang="en-US">D</span>, мм</p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span lang="en-US">L</span>, мм</p>
+                            </td>
+                            <td valign="top" width="149">
+                                <p class="western" align="center"><span lang="en-US">L</span>1, мм</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,15</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">415</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">1656</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">1766</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,55</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">470</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">1996</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2121</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-4</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">515</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2042</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2172</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-4,5</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">565</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2094</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2224</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-5</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">605</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2146</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2291</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="120">
+                                <p class="western"><span style="font-size: small;">ВОДВ-15-320-5,6</span></p>
+                            </td>
+                            <td width="62">
+                                <p class="western" align="center"><span style="font-size: small;">675</span></p>
+                            </td>
+                            <td width="82">
+                                <p class="western" align="center"><span style="font-size: small;">2210</span></p>
+                            </td>
+                            <td width="149">
+                                <p class="western" align="center"><span style="font-size: small;">2355</span></p>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                     <p>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) КЦК, КЦКВ, КЦКЗ, КЦКМ, КЦКП применяются в стационарных системах кондиционирования
                         воздуха и вентиляции для общеобменной вентиляции промышленных, гражданских и жилых зданий, а также санитарно-технических и производственных целей (кроме
                         технологических) производств химической, газовой и нефтеперерабатывающей промышленности в соответствии с требованиями СНиП 2.04.05. </p>
@@ -200,6 +312,118 @@
                                 КЦКМ-8-1, КЦКМ-8-2, КЦКМ-10, КЦКМ-12,5, КЦКМ-16, КЦКМ-20; - Подвесные кондиционеры КЦКП-1,5, КЦКП-2, КЦКП-3, КЦКП-4, а также оборудование, из которого они
                                 состоят (дальше по тексту “кондиционеры” и “вентиляционное оборудование”) проектируются и изготавливаются для внутреннего рынка и на экспорт в страны с
                                 умеренным и тропическим климатом. </p>
+                            <table width="471" cellspacing="0" cellpadding="7">
+                                <colgroup>
+                                    <col width="120">
+                                    <col width="62">
+                                    <col width="82">
+                                    <col width="149"> </colgroup>
+                                <tbody>
+                                <tr>
+                                    <td rowspan="2" width="120">
+                                        <p class="western" align="center">Обозначение</p>
+                                    </td>
+                                    <td colspan="3" valign="top" width="321">
+                                        <p class="western" align="center">Размеры, мм</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td width="62">
+                                        <p class="western" align="center"><span lang="en-US">D</span>, мм</p>
+                                    </td>
+                                    <td width="82">
+                                        <p class="western" align="center"><span lang="en-US">L</span>, мм</p>
+                                    </td>
+                                    <td valign="top" width="149">
+                                        <p class="western" align="center"><span lang="en-US">L</span>1, мм</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top" width="120">
+                                        <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,15</span></p>
+                                    </td>
+                                    <td width="62">
+                                        <p class="western" align="center"><span style="font-size: small;">415</span></p>
+                                    </td>
+                                    <td width="82">
+                                        <p class="western" align="center"><span style="font-size: small;">1656</span></p>
+                                    </td>
+                                    <td width="149">
+                                        <p class="western" align="center"><span style="font-size: small;">1766</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top" width="120">
+                                        <p class="western"><span style="font-size: small;">ВОДВ-15-320-3,55</span></p>
+                                    </td>
+                                    <td width="62">
+                                        <p class="western" align="center"><span style="font-size: small;">470</span></p>
+                                    </td>
+                                    <td width="82">
+                                        <p class="western" align="center"><span style="font-size: small;">1996</span></p>
+                                    </td>
+                                    <td width="149">
+                                        <p class="western" align="center"><span style="font-size: small;">2121</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top" width="120">
+                                        <p class="western"><span style="font-size: small;">ВОДВ-15-320-4</span></p>
+                                    </td>
+                                    <td width="62">
+                                        <p class="western" align="center"><span style="font-size: small;">515</span></p>
+                                    </td>
+                                    <td width="82">
+                                        <p class="western" align="center"><span style="font-size: small;">2042</span></p>
+                                    </td>
+                                    <td width="149">
+                                        <p class="western" align="center"><span style="font-size: small;">2172</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top" width="120">
+                                        <p class="western"><span style="font-size: small;">ВОДВ-15-320-4,5</span></p>
+                                    </td>
+                                    <td width="62">
+                                        <p class="western" align="center"><span style="font-size: small;">565</span></p>
+                                    </td>
+                                    <td width="82">
+                                        <p class="western" align="center"><span style="font-size: small;">2094</span></p>
+                                    </td>
+                                    <td width="149">
+                                        <p class="western" align="center"><span style="font-size: small;">2224</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top" width="120">
+                                        <p class="western"><span style="font-size: small;">ВОДВ-15-320-5</span></p>
+                                    </td>
+                                    <td width="62">
+                                        <p class="western" align="center"><span style="font-size: small;">605</span></p>
+                                    </td>
+                                    <td width="82">
+                                        <p class="western" align="center"><span style="font-size: small;">2146</span></p>
+                                    </td>
+                                    <td width="149">
+                                        <p class="western" align="center"><span style="font-size: small;">2291</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td valign="top" width="120">
+                                        <p class="western"><span style="font-size: small;">ВОДВ-15-320-5,6</span></p>
+                                    </td>
+                                    <td width="62">
+                                        <p class="western" align="center"><span style="font-size: small;">675</span></p>
+                                    </td>
+                                    <td width="82">
+                                        <p class="western" align="center"><span style="font-size: small;">2210</span></p>
+                                    </td>
+                                    <td width="149">
+                                        <p class="western" align="center"><span style="font-size: small;">2355</span></p>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
                             <p>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) КЦК, КЦКВ, КЦКЗ, КЦКМ, КЦКП применяются в стационарных системах кондиционирования
                                 воздуха и вентиляции для общеобменной вентиляции промышленных, гражданских и жилых зданий, а также санитарно-технических и производственных целей (кроме
                                 технологических) производств химической, газовой и нефтеперерабатывающей промышленности в соответствии с требованиями СНиП 2.04.05. </p>
